src/tests/testfiles/binary-operators/types-32.txt
testfiles/binary-operators/types-32.c:5:7: error: invalid operands to comparison '==' (have 'char' and 'int')
a == b[0];
  ^
